force-app/main/default/objects/R360_Integration_Run__c/R360_Integration_Run__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Observable source-system synchronization run and reconciliation evidence.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>Private</externalSharingModel><label>Resource 360 Integration Run</label><nameField><displayFormat>RUN-{00000}</displayFormat><label>Run Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Integration Runs</pluralLabel><sharingModel>Private</sharingModel><visibility>Public</visibility></CustomObject>