force-app/main/default/objects/R360_Integration_Run__c/fields/Collision_Count__c.field-meta.xml
<CustomField><fullName>Collision_Count__c</fullName><defaultValue>0</defaultValue><label>Collision Count</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>