force-app/main/default/objects/R360_Integration_Run__c/fields/Commit_Mode__c.field-meta.xml
<CustomField><fullName>Commit_Mode__c</fullName><label>Commit Mode</label><required>false</required><trackHistory>true</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Atomic</fullName><default>false</default><label>Atomic</label></value><value><fullName>Partial</fullName><default>false</default><label>Partial</label></value><value><fullName>Dry Run</fullName><default>false</default><label>Dry Run</label></value><value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value></valueSetDefinition></valueSet></CustomField>