force-app/main/default/objects/R360_Integration_Run__c/fields/Completeness_Percent__c.field-meta.xml
<CustomField><fullName>Completeness_Percent__c</fullName><label>Completeness Percent</label><precision>5</precision><scale>2</scale><type>Number</type></CustomField>