force-app/main/default/objects/R360_Integration_Run__c/fields/Contract_Version__c.field-meta.xml
<CustomField><fullName>Contract_Version__c</fullName><caseSensitive>false</caseSensitive><externalId>false</externalId><label>Contract Version</label><length>40</length><required>false</required><type>Text</type><unique>false</unique></CustomField>