force-app/main/default/objects/R360_Integration_Run__c/fields/Data_Quality_Score__c.field-meta.xml
<CustomField><fullName>Data_Quality_Score__c</fullName><description>Composite completeness, uniqueness, validity and relationship score.</description><label>Data Quality Score</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>