force-app/main/default/objects/R360_Integration_Run__c/fields/Detail__c.field-meta.xml
<CustomField><fullName>Detail__c</fullName><label>Redacted Detail</label><length>4000</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>