force-app/main/default/objects/R360_Integration_Run__c/fields/Failure_Count__c.field-meta.xml
<CustomField><fullName>Failure_Count__c</fullName><defaultValue>0</defaultValue><label>Failure Count</label><precision>12</precision><scale>0</scale><type>Number</type></CustomField>