force-app/main/default/objects/R360_Integration_Run__c/fields/Field_Completeness_Percent__c.field-meta.xml
<CustomField><fullName>Field_Completeness_Percent__c</fullName><description>Required canonical fields populated across processed records.</description><label>Field Completeness Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>