force-app/main/default/objects/R360_Integration_Run__c/fields/Freshness_State__c.field-meta.xml
<CustomField><fullName>Freshness_State__c</fullName><label>Freshness State</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Fresh</fullName><default>true</default><label>Fresh</label></value><value><fullName>Stale</fullName><default>false</default><label>Stale</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value></valueSetDefinition></valueSet></CustomField>