force-app/main/default/objects/R360_Integration_Run__c/fields/Identity_Match_Percent__c.field-meta.xml
<CustomField><fullName>Identity_Match_Percent__c</fullName><description>Source rows matched to a stable Resource 360 identity.</description><label>Identity Match Percent</label><precision>7</precision><scale>2</scale><trackHistory>false</trackHistory><type>Percent</type></CustomField>