force-app/main/default/objects/R360_Integration_Run__c/fields/Orphan_Record_Count__c.field-meta.xml
<CustomField><fullName>Orphan_Record_Count__c</fullName><description>Rows without a valid parent or identity relationship.</description><label>Orphan Record Count</label><precision>10</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>