force-app/main/default/objects/R360_Integration_Run__c/fields/Processed_Count__c.field-meta.xml
<CustomField><fullName>Processed_Count__c</fullName><defaultValue>0</defaultValue><label>Processed Count</label><precision>12</precision><scale>0</scale><type>Number</type></CustomField>