force-app/main/default/objects/R360_Integration_Run__c/fields/Processing_Latency_Seconds__c.field-meta.xml
<CustomField><fullName>Processing_Latency_Seconds__c</fullName><description>Elapsed processing latency for the governed run.</description><label>Processing Latency Seconds</label><precision>12</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>