force-app/main/default/objects/R360_Integration_Run__c/fields/Retry_Count__c.field-meta.xml
<CustomField><fullName>Retry_Count__c</fullName><description>Technical retry attempts for the run.</description><label>Retry Count</label><precision>5</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>