force-app/main/default/objects/R360_Integration_Run__c/fields/Run_ID__c.field-meta.xml
<CustomField><fullName>Run_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Run ID</label><length>120</length><required>true</required><type>Text</type><unique>true</unique></CustomField>