force-app/main/default/objects/R360_Integration_Run__c/fields/Source_Cutoff__c.field-meta.xml
<CustomField><fullName>Source_Cutoff__c</fullName><label>Source Cutoff</label><type>DateTime</type></CustomField>