force-app/main/default/objects/R360_Integration_Run__c/fields/Source_File_Hash__c.field-meta.xml
<CustomField><fullName>Source_File_Hash__c</fullName><caseSensitive>false</caseSensitive><externalId>false</externalId><label>Source File Hash</label><length>64</length><required>false</required><trackHistory>true</trackHistory><type>Text</type><unique>false</unique></CustomField>