force-app/main/default/objects/R360_Integration_Run__c/fields/Source_File_Name__c.field-meta.xml
<CustomField><fullName>Source_File_Name__c</fullName><label>Source File Name</label><length>255</length><required>false</required><trackHistory>true</trackHistory><type>Text</type></CustomField>