force-app/main/default/objects/R360_Integration_Run__c/fields/Source_System__c.field-meta.xml
<CustomField><fullName>Source_System__c</fullName><label>Source System</label><length>80</length><required>true</required><type>Text</type></CustomField>