force-app/main/default/objects/R360_Integration_Run__c/fields/Started_At__c.field-meta.xml
<CustomField><fullName>Started_At__c</fullName><label>Started At</label><required>true</required><type>DateTime</type></CustomField>