force-app/main/default/objects/R360_Integration_Run__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><defaultValue>'Running'</defaultValue><label>State</label><length>30</length><required>true</required><trackHistory>true</trackHistory><type>Text</type></CustomField>