force-app/main/default/objects/R360_Integration_Run__c/fields/Success_Count__c.field-meta.xml
<CustomField><fullName>Success_Count__c</fullName><defaultValue>0</defaultValue><label>Success Count</label><precision>12</precision><scale>0</scale><type>Number</type></CustomField>