force-app/main/default/objects/R360_Integration_Run__c/fields/Updated_Count__c.field-meta.xml
<CustomField><fullName>Updated_Count__c</fullName><defaultValue>0</defaultValue><label>Updated Count</label><precision>18</precision><scale>0</scale><type>Number</type></CustomField>